--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "6.0.0",
+    "@nestjs/cli": "11.0.7",
     "antd": "5.26.2",
     "antd-style": "3.7.1",
     "motion": "12.23.5",
