--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "packages/*"
   ],
   "scripts": {
-    "dev:front": "npx vite -c ./packages/frontend/vite.config.ts",
+    "dev:front": "npx vite",
+    "dev:back": "npx vite",
     "changelog": "conventional-changelog -p custom-config -i CHANGELOG.md -s -r 0  -n ./changelog-option.cjs",
     "prepare": "npx husky install"
   },
