--- a/package.json
+++ b/package.json
@@ -34,10 +34,18 @@
   "devDependencies": {
     "@commitlint/cli": "19.4.0",
     "@commitlint/config-conventional": "19.2.2",
+    "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.29.0",
-    "@types/node": "24.0.4",
+    "@nestjs/schematics": "11.0.5",
+    "@nestjs/testing": "11.1.5",
+    "@swc/cli": "0.7.8",
+    "@swc/core": "1.13.1",
+    "@types/express": "5.0.3",
+    "@types/jest": "30.0.0",
+    "@types/node": "24.0.15",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "@types/supertest": "6.0.3",
     "@vitejs/plugin-react": "4.6.0",
     "commitizen": "4.3.0",
     "compare-func": "2.0.0",
@@ -45,13 +53,22 @@
     "conventional-changelog-cli": "5.0.0",
     "conventional-changelog-custom-config": "0.3.1",
     "eslint": "9.29.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.3",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "git-cz": "4.9.0",
-    "globals": "16.2.0",
+    "globals": "16.3.0",
     "husky": "9.1.5",
+    "jest": "30.0.4",
     "lint-staged": "15.2.9",
     "prettier": "3.3.3",
+    "source-map-support": "0.5.21",
+    "supertest": "7.1.3",
+    "ts-jest": "29.4.0",
+    "ts-loader": "9.5.2",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
     "typescript": "5.8.3",
     "typescript-eslint": "8.35.0",
     "vite": "7.0.0"
